# ada_demos

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  package.xml  setup.py
.ci/: after_failure.sh  before_install.sh  build_docs.sh  install.sh  script.sh  script_catkin.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-test.yml  docs.yml
cameraCalibration/: CMakeLists.txt
cameraCalibration/include/cameraCalibration/: Perception.hpp  util.hpp
cameraCalibration/src/: Perception.cpp  main.cpp  util.cpp
feeding/: CMakeLists.txt  README.md
feeding/action/: SetGoalPose.action
feeding/bash_scripts/: data_collection.sh  download_detector_checkpoint.sh  image_collection.sh  spanet_data_collection.sh
feeding/config/: data_collection.yaml  feeding_demo.yaml  feeding_demo.yaml.bak  feeding_demo.yaml2  graph_1000_feeding.graphml  test_scoop.txt
feeding/include/feeding/: AcquisitionAction.hpp  AcquisitionDetector.hpp  AdaMover.hpp  CheckerboardPerception.hpp  DataCollector.hpp  FTThresholdController.hpp  FTThresholdHelper.hpp  FeedingDemo.hpp  FoodItem.hpp  GoalPoseController.hpp  GoalPoseControllerBase.hpp  GoalPoseExecutor.hpp  Perception.hpp  PerceptionPreProcess.hpp  PerceptionServoClient.hpp  TargetFoodItem.hpp  Workspace.hpp  onFork.hpp  util.hpp
feeding/include/feeding/action/: Acquire.hpp  AcquireMoveAboveFood.hpp  AcquireMoveInto.hpp  AcquireMoveOutOf.hpp  DetectAndMoveAboveFood.hpp  DetectFood.hpp  DetectScoop.hpp  FeedFoodToPerson.hpp  Grab.hpp  KinovaScoop.hpp  LiftUp.hpp  MoveAbove.hpp  MoveAboveAndScoop.hpp  MoveAboveFood.hpp  MoveAboveForque.hpp  MoveAbovePlate.hpp  MoveDirectlyToPerson.hpp  MoveInFrontOfPerson.hpp  MoveInto.hpp  MoveOutOf.hpp  MoveToPerson.hpp  MoveTowardsPerson.hpp  PickUpFork.hpp  PolyScoop.hpp  PolyTraj.hpp  Push.hpp  PushOnFood.hpp  Pushing.hpp  PutDownFork.hpp  Reset.hpp  Scoop.hpp  ScoopHelper.hpp  Skewer.hpp  SkewerOnline.hpp  TouchTable.hpp
feeding/include/feeding/frechet/: FrechetUtil.hpp
feeding/include/feeding/perception/: Perception.hpp  PerceptionPreProcess.hpp  PerceptionServoClient.hpp
feeding/include/feeding/ranker/: ShortestDistanceRanker.hpp  SuccessRateRanker.hpp  TargetFoodRanker.hpp
feeding/launch/: feeding.launch
feeding/python/: acquisition_detector.py  forque_publisher.py  image_publisher.py
feeding/scripts/: DetectScoopDemo.cpp  ScoopDemo.cpp  acquisition.cpp  acquisitionDemo.cpp  bite_location_detector.cpp  dataCollection.cpp  demo.cpp  experiments.hpp  gelsightDemo.cpp  gelslightDemo with changes.cpp  gelslightDemo.cpp  humanStudy.cpp  kinovaScoopDemo.cpp  main.cpp  onlineDemo.cpp  pD.cpp  posthocExperiment.cpp  pushDemo.cpp  pushingDemo.cpp  resetDemo.cpp  spanetDataCollection.cpp  spanetDemo.cpp
feeding/src/: AcquisitionAction.cpp  AcquisitionDetector.cpp  AdaMover.cpp  CheckerboardPerception.cpp  DataCollector.cpp  FTThresholdController.cpp  FTThresholdHelper.cpp  FeedingDemo.cpp  FeedingDemo2.cpp  FoodItem.cpp  GoalPoseController.cpp  GoalPoseControllerBase.cpp  GoalPoseExecutor.cpp  Perception.cpp  PerceptionPreProcess.cpp  PerceptionServoClient.cpp  Workspace.cpp  acquisitionmain.cpp  acquisitiontiltedmain.cpp  bltmain.cpp  bltpushingmain.cpp  bltskewerpushmain.cpp  datacollectionmain.cpp  datacollectionmainNoPush.cpp  defaultmain.cpp  demomain.cpp  main.cpp  nipsmain.cpp  ohmain.cpp  onFork.cpp  pushingmain.cpp  scoopmain.cpp  skewerpushmain.cpp  studymain.cpp  util.cpp
feeding/src/action/: Acquire.cpp  AcquireMoveAboveFood.cpp  AcquireMoveInto.cpp  AcquireMoveOutOf.cpp  Acquisition.cpp  DetectAndMoveAboveFood.cpp  DetectFood.cpp  DetectScoop.cpp  FeedFoodToPerson.cpp  Grab.cpp  KinovaScoop.cpp  LiftUp.cpp  MoveAbove.cpp  MoveAboveAndScoop.cpp  MoveAboveFood.cpp  MoveAboveForque.cpp  MoveAbovePlate.cpp  MoveDirectlyToPerson.cpp  MoveInFrontOfPerson.cpp  MoveInto.cpp  MoveOutOf.cpp  MoveToPerson.cpp  MoveTowardsPerson.cpp  PickUpFork.cpp  PolyScoop.cpp  Push.cpp  PushOnFood.cpp  Pushing.cpp  PutDownFork.cpp  Reset.cpp  Scoop.cpp  Skewer.cpp  SkewerOnline.cpp  TouchTable.cpp
feeding/src/frechet/: FrechetUtil.cpp
feeding/src/perception/: Perception.cpp  PerceptionPreProcess.cpp  PerceptionServoClient.cpp
feeding/src/ranker/: ShortestDistanceRanker.cpp  SuccessRateRanker.cpp  TargetFoodRanker.cpp
gelslight_experiments/: CMakeLists.txt
gelslight_experiments/src/: main.cpp
gls_graph_generator/: CMakeLists.txt
gls_graph_generator/src/: configurations.cpp  configurations.hpp  graphGenerator.cpp  graphGenerator.py  viz.cpp
hand_control/: CMakeLists.txt
hand_control/src/: main.cpp
kevins_garbage/: CMakeLists.txt
kevins_garbage/include/: FTThresholdHelper (copy).hpp  FTThresholdHelper.hpp  util.hpp
kevins_garbage/src/: FTThresholdHelper.cpp  main.cpp
simple_perception/: CMakeLists.txt  README.md
simple_perception/src/: main.cpp
simple_trajectories/: CMakeLists.txt  README.md
simple_trajectories/src/: hammer.cpp  load_trajectories.cpp  main.cpp
soda_grasp/: CMakeLists.txt
soda_grasp/src/: main.cpp
v0.1.0/: .rosinstall
voxel/: CMakeLists.txt
voxel/src/: main.cpp
